--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,7 @@
 # Data logging
 log_data: 1
 log_path: "/home/tina997726/corgi_ws/fpga_driver/log/sample_test.csv"
+# log_path: "/home/admin/corgi_ws/fpga_driver/log/sample_test.csv"
 
 # TCP node communication setup
 Master_IP: "192.168.0.107"
